Multiprocessing to speed up training, new feature set

--- a/notebooks/decision_tree_baseline.ipynb
+++ b/notebooks/decision_tree_baseline.ipynb
@@ -28,7 +28,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,119 +51,202 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "rows = vectorizer.parse_and_return_rows('../utils/data/processed_data/dev.csv')\n",
-    "vocabulary, vocabulary_length = vectorizer.return_len_and_vocabulary(rows)\n",
-    "word_to_index = vectorizer.create_token_index(vocabulary)\n",
+    "def features1(rows, word_to_index):\n",
+    "    # make training instances with the first hypothesis\n",
+    "    instances  = [(row[1] + \" \" + row[2] + \" \" + row[3], 1 if row[5] == '1' else 0) for row in rows]\n",
     "\n",
-    "# make training instances with the first hypothesis\n",
-    "training_instances  = [(row[1] + \" \" + row[2] + \" \" + row[3], 1 if row[5] == '1' else 0) for row in rows]\n",
+    "    # add training instances with the second hypothesis\n",
+    "    instances += [(row[1] + \" \" + row[2] + \" \" + row[4], 1 if row[5] == '2' else 0) for row in rows]\n",
     "\n",
-    "# add training instances with the second hypothesis\n",
-    "training_instances += [(row[1] + \" \" + row[2] + \" \" + row[4], 1 if row[5] == '2' else 0) for row in rows]\n",
+    "    # change the text into sparse incidence vectors\n",
+    "    vectorized_instances = [(vectorizer.sparse_incidence_vector(text, word_to_index), label) for (text, label) in instances]\n",
     "\n",
-    "# change the text into sparse incidence vectors\n",
-    "vectorized_training_instances = [(vectorizer.sparse_incidence_vector(text, word_to_index), label) for (text, label) in training_instances]\n",
+    "    # convert from list of (vector, label) tuples into two separate lists\n",
+    "    [x, y] = [list(t) for t in zip(*vectorized_instances)]\n",
     "\n",
-    "# convert from list of (vector, label) tuples into two separate lists\n",
-    "[x, y] = [list(t) for t in zip(*vectorized_training_instances)]"
+    "    return x, y\n",
+    "\n",
+    "def features2(rows, word_to_index):\n",
+    "    # make training instances with the first hypothesis\n",
+    "    instances  = [(row[1] + \" \" + row[2], row[3], 1 if row[5] == '1' else 0) for row in rows]\n",
+    "\n",
+    "    # add training instances with the second hypothesis\n",
+    "    instances += [(row[1] + \" \" + row[2], row[4], 1 if row[5] == '2' else 0) for row in rows]\n",
+    "\n",
+    "    # change the text into sparse incidence vectors\n",
+    "    vectorized_instances = [(vectorizer.sparse_incidence_vector(observations, word_to_index).intersection(vectorizer.sparse_incidence_vector(hypothesis, word_to_index)), label) for (observations, hypothesis, label) in instances]\n",
+    "\n",
+    "    # convert from list of (vector, label) tuples into two separate lists\n",
+    "    [x, y] = [list(t) for t in zip(*vectorized_instances)]\n",
+    "\n",
+    "    return x, y"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rows = vectorizer.parse_and_return_rows('../utils/data/processed_data/train.csv')\n",
+    "vocabulary, vocabulary_length = vectorizer.return_len_and_vocabulary(rows)\n",
+    "word_to_index = vectorizer.create_token_index(vocabulary)\n",
+    "x, y = features2(rows, word_to_index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "test_rows = vectorizer.parse_and_return_rows('../utils/data/processed_data/dev.csv')\n",
     "\n",
-    "# make training instances with the first hypothesis\n",
-    "test_instances  = [(row[1] + \" \" + row[2] + \" \" + row[3], 1 if row[5] == '1' else 0) for row in test_rows]\n",
-    "\n",
-    "# add training instances with the second hypothesis\n",
-    "test_instances += [(row[1] + \" \" + row[2] + \" \" + row[4], 1 if row[5] == '2' else 0) for row in test_rows]\n",
-    "\n",
-    "# change the text into sparse incidence vectors\n",
-    "vectorized_test_instances = [(vectorizer.sparse_incidence_vector(text, word_to_index), label) for (text, label) in test_instances]\n",
-    "\n",
-    "# convert from list of (vector, label) tuples into two separate lists\n",
-    "[x_test, y_test] = [list(t) for t in zip(*vectorized_test_instances)]"
+    "x_test, y_test = features2(test_rows, word_to_index)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def do_experiment(max_depth, subset_size):\n",
+    "def train_tree(max_depth, subset_size, num_threads=1, print_logs=True, decision_tree=None, logs=[], accuracy_frequency=10):\n",
     "    start = time.time()\n",
     "\n",
-    "    decision_tree = BinaryDecisionTree()\n",
+    "    if decision_tree is None:\n",
+    "        decision_tree = BinaryDecisionTree()\n",
     "    decision_tree.initialize_training(x, y)\n",
     "\n",
     "    can_keep_expanding = True\n",
+    "\n",
     "    while can_keep_expanding:\n",
     "        if max_depth is not None and decision_tree.current_depth >= max_depth:\n",
-    "            return\n",
-    "        start = time.time()\n",
+    "            return logs, decision_tree\n",
+    "        one_layer_start = time.time()\n",
     "\n",
-    "        can_keep_expanding = decision_tree.expand_tree(subset_size)\n",
+    "        can_keep_expanding = decision_tree.expand_tree(subset_size, num_threads)\n",
     "\n",
-    "        end = time.time()\n",
+    "        one_layer_end = time.time()\n",
     "        \n",
-    "        predictions = []\n",
-    "        for instance in x_test:\n",
-    "            predictions.append(decision_tree.predict_class(instance))\n",
+    "        layer_time = one_layer_end - one_layer_start\n",
+    "        total_time = one_layer_end - start\n",
+    "        if print_logs:\n",
+    "            print(\"Depth: \", decision_tree.current_depth, \"Total nodes: \", decision_tree.total_nodes, \"Time taken on layer: \", layer_time, \"Total time taken: \", total_time)\n",
+    "        logs.append((decision_tree.current_depth, decision_tree.total_nodes, layer_time, total_time))\n",
     "\n",
-    "        accuracy = evaluation.calculate_accuracy(predictions, y_test)\n",
-    "        print(\"Depth: \", decision_tree.current_depth, \"Total nodes: \", decision_tree.total_nodes, \"Current accuracy: \", accuracy, \"Time taken: \", end - start)\n",
+    "        if decision_tree.current_depth % accuracy_frequency == 0:\n",
+    "            print(\"dev: \", calculate_accuracy(decision_tree, x_test, y_test))\n",
+    "            print(\"train: \", calculate_accuracy(decision_tree, x, y))\n",
     "\n",
-    "    return decision_tree"
+    "    return logs, decision_tree\n",
+    "\n",
+    "def calculate_accuracy(decision_tree, x, y):\n",
+    "    predictions = []\n",
+    "    for instance in x:\n",
+    "        predictions.append(decision_tree.predict_class(instance))\n",
+    "    return evaluation.calculate_accuracy(predictions, y)\n",
+    "\n",
+    "def calculate_accuracy_at_all_depths(decision_tree, x, y):\n",
+    "    accuracies = []\n",
+    "    predictions_at_all_depths = decision_tree.predict_classes_at_all_depths(x)\n",
+    "\n",
+    "    # calculate transpose of predictions \n",
+    "    predictions_at_all_depths = list(map(list, zip(*predictions_at_all_depths)))\n",
+    "\n",
+    "    for predictions_at_depth in predictions_at_all_depths:\n",
+    "        accuracy = evaluation.calculate_accuracy(predictions_at_depth, y)\n",
+    "        accuracies.append(accuracy)\n",
+    "\n",
+    "    return accuracies\n",
+    "\n",
+    "def save_results(logs, train_accuracies, dev_accuracies, file_name):\n",
+    "    file = open(file_name, \"w\")\n",
+    "    file.write(\"acc_train,acc_dev,depth,nodes,time_for_layer,total_time\\n\")\n",
+    "    for i, log in enumerate(logs):\n",
+    "        message = \"%s,%s,%s,%s,%s,%s\\n\" % (train_accuracies[i], dev_accuracies[i], log[0], log[1], log[2], log[3])\n",
+    "        file.write(message)\n",
+    "    file.close()\n",
+    "\n",
+    "def do_experiment(max_depth, subset_size, result_file_name, num_threads=1, print_logs=True, accuracy_frequency=10, tree=None, logs=[]):\n",
+    "    logs, tree = train_tree(max_depth, subset_size, num_threads, print_logs, tree, logs, accuracy_frequency)\n",
+    "    print(\"Calculating accuracy at all depths...\")\n",
+    "    start = time.time()\n",
+    "    train_accuracies = calculate_accuracy_at_all_depths(tree, x, y)\n",
+    "    dev_accuracies = calculate_accuracy_at_all_depths(tree, x_test, y_test)\n",
+    "    end = time.time()\n",
+    "    print(\"Time taken: \", end - start)\n",
+    "    print(\"Final train accuracy: \", train_accuracies[-1])\n",
+    "    print(\"Final dev accuracy: \", dev_accuracies[-1])\n",
+    "    save_results(logs, train_accuracies, dev_accuracies, result_file_name)\n",
+    "    return logs, tree"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tree = do_experiment(max_depth=100, subset_size=None)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tree = do_experiment(max_depth=100, subset_size=100)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "error",
-     "ename": "TypeError",
-     "evalue": "__init__() takes 2 positional arguments but 3 were given",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-5-aba89c9a2a12>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mtree\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdo_experiment\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmax_depth\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m100\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msubset_size\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-4-820073a084bd>\u001b[0m in \u001b[0;36mdo_experiment\u001b[1;34m(max_depth, subset_size)\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[0mdecision_tree\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mBinaryDecisionTree\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m     \u001b[0mdecision_tree\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0minitialize_training\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m     \u001b[0mcan_keep_expanding\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mTrue\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mc:\\Users\\Emkin\\Documents\\Uni stuttgart\\SoSe2021\\Team Lab\\nlp-teamlab\\models\\decision_tree.py\u001b[0m in \u001b[0;36minitialize_training\u001b[1;34m(self, x, y)\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0minitialize_training\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 13\u001b[1;33m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mroot\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mBinaryDecisionTreeNode\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     14\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mleaf_nodes_to_split_at_current_depth\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mroot\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mleaf_nodes_to_split_at_next_level\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: __init__() takes 2 positional arguments but 3 were given"
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Depth:  1 Total nodes:  1 Time taken on layer:  3.4729671478271484 Total time taken:  3.507969856262207\n",
+      "Depth:  2 Total nodes:  3 Time taken on layer:  4.172904968261719 Total time taken:  7.6818718910217285\n",
+      "Depth:  3 Total nodes:  7 Time taken on layer:  4.1800689697265625 Total time taken:  11.861940860748291\n",
+      "Depth:  4 Total nodes:  13 Time taken on layer:  4.4804301261901855 Total time taken:  16.343372344970703\n",
+      "Depth:  5 Total nodes:  21 Time taken on layer:  5.76399827003479 Total time taken:  22.107370615005493\n",
+      "Depth:  6 Total nodes:  31 Time taken on layer:  6.451127767562866 Total time taken:  28.559501886367798\n",
+      "Depth:  7 Total nodes:  43 Time taken on layer:  5.135952949523926 Total time taken:  33.695454835891724\n",
+      "Depth:  8 Total nodes:  61 Time taken on layer:  5.071433067321777 Total time taken:  38.767887115478516\n",
+      "Depth:  9 Total nodes:  81 Time taken on layer:  7.344165086746216 Total time taken:  46.11305284500122\n",
+      "Depth:  10 Total nodes:  105 Time taken on layer:  7.790454864501953 Total time taken:  53.903507709503174\n",
+      "dev:  50.391644908616186\n",
+      "train:  50.64778902943638\n",
+      "Calculating accuracy at all depths...\n",
+      "Time taken:  6.915629863739014\n",
+      "Final train accuracy:  50.64778902943638\n",
+      "Final dev accuracy:  50.391644908616186\n"
      ]
     }
    ],
    "source": [
-    "tree = do_experiment(max_depth=100, subset_size=2)"
+    "tree = BinaryDecisionTree()\n",
+    "logs = []\n",
+    "file_name = \"e15_subset5000.csv\"\n",
+    "logs, tree = do_experiment(max_depth=10000, subset_size=5000, num_threads=5, result_file_name=file_name, accuracy_frequency=10, tree=tree, logs=logs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Calculating accuracy at all depths...\n",
+      "Time taken:  0.8800668716430664\n",
+      "Final accuracy:  49.90208877284596\n"
+     ]
+    }
+   ],
+   "source": [
+    "# use this to save the results of a run that was cancelled early  \n",
+    "print(\"Calculating accuracy at all depths...\")\n",
+    "start = time.time()\n",
+    "train_accuracies = calculate_accuracy_at_all_depths(tree, x, y)\n",
+    "dev_accuracies = calculate_accuracy_at_all_depths(tree, x_test, y_test)\n",
+    "end = time.time()\n",
+    "print(\"Time taken: \", end - start)\n",
+    "print(\"Final train accuracy: \", train_accuracies[-1])\n",
+    "print(\"Final dev accuracy: \", dev_accuracies[-1])\n",
+    "save_results(logs, train_accuracies, dev_accuracies, result_file_name)\n"
    ]
   },
   {
